[tool.poetry]
name = "render-native"
version = "0.1.0"
description = "Learning poetry and configuration settings of FastAPI"
authors = ["Robin Michael <Siliconrob@siliconheaven.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2,<3.13"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
stamina = "^24.2.0"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"
pydapper = { version = "^0.10.0", python = "^3.12" }
icecream = "^2.1.3"
async-lru = "^2.0.4"
limits = "^3.13.0"
slowapi = "^0.1.9"
cacheout = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
